<?xml version="1.0"?>
<package format="2">
  <name>grid_map_msgs</name>
  <version>1.7.18</version>
  <description>Definition of the multi-layered grid map message type.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="dlopez@anybotics.com">Daniel López Madrid</maintainer>
  <maintainer email="zli@anybotics.com">Zichong Li</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
